#67 übersicht buchungen - dtos - mappers for dto - booking dialog